# ipyreact-starter

./: README.md  Simple-Example.ipynb  full_build.sh  pyproject.toml
ipyreact_starter/: __init__.py  _version.py
