[build-system]
requires = [
    "hatchling",
    "jupyterlab~=4.3",
]
build-backend = "hatchling.build"


[project]
name = "ipyreact-starter"
dynamic = ["version"]
homepage = "https://github.com/paddymul/ipyreact-starter"
repository = "https://github.com/paddymul/ipyreact-starter"
description = ""
authors = [  { name = "Paddy Mullen", email = "paddy@paddymullen.com" }]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "ipywidgets>=7.0.0",
    "anywidget>=0.9.13",
    "ipyreact"
]

[project.urls]
Homepage = "https://github.com/ipyreact/ipyreact-starter"


[project.optional-dependencies]
unit-test = [
    "pytest>=6.0",
]
ui-test = [
    "solara[pytest]",
    "pytest>=6.0",
]


[tool.hatch.version]
path = "ipyreact_starter/_version.py"

[tool.hatch.build.targets.wheel]
include = [
   "ipyreact_starter/*.py",
   "packages/bundled-staging/ipyreact-tsxlib.rollup.bundle.js"
]